--- a/index.html
+++ b/index.html
@@ -34,9 +34,15 @@
     </section>
     <section class="fafniri">
       <div class="fafnir">
-        <a href="" class="fafnir-link">На KZ</a>
-        <a href="" class="fafnir-link">Авторский перевод</a>
-        <a href=" " class="fafnir-link"></a>
+        <a href="https://nikitakogay.github.io/STARTLUBKZ/" class="fafnir-link"
+          >На KZ</a
+        >
+        <a href="https://nikitakogay.github.io/STARTLUBAP/" class="fafnir-link"
+          >Авторский перевод</a
+        >
+        <a href="https://nikitakogay.github.io/STARTLUB/" class="fafnir-link"
+          >На главную</a
+        >
         <a href="" class="fafnir-link"></a>
         <a href="" class="fafnir-link"></a>
       </div>
